fix: update gradle version